[package]
name = "mbx"
version = "0.2.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2024"

[features]
# Enable this feature to add support for converting between blake3 hash types and the types in this crate.
blake3 = ["dep:blake3"]
# Enable this feature to add support for the codec_str function, which gives the `&'static str` representation of a codec.
codec-str = []
# Enable this feature to add support for converting between ed25519-dalek crate priv+pub keys and the types in this crate.
ed25519-dalek = ["dep:ed25519-dalek", "dep:signature"]
# Enable this feature to add support for converting between ed448-goldilocks crate priv+pub keys and the types in this crate.
ed448-goldilocks = ["dep:ed448-goldilocks", "dep:signature"]
# Enable this feature to add support for converting between k256 crate priv+pub keys and the types in this crate.
k256 = ["dep:k256", "dep:signature"]
# Enable this feature to add support for converting between p256 crate priv+pub keys and the types in this crate.
p256 = ["dep:p256", "dep:signature"]
# Enable this feature to add support for converting between p384 crate priv+pub keys and the types in this crate.
p384 = ["dep:p384", "dep:signature"]
# Enable this feature to add support for converting between p521 crate priv+pub keys and the types in this crate.
p521 = ["dep:p521", "dep:signature"]
# Enable this feature to add support for the `serde` Deserialize and Serialize traits for the types in this crate.
serde = ["dep:serde"]
# Enable this feature to add support for converting between sha2 crate hash types and the types in this crate.
sha2 = ["dep:sha2"]
# Enable this feature to add support for converting between sha3 crate hash types and the types in this crate.
sha3 = ["dep:sha3"]
# Enable this feature to add support for conversions from signature crate error types to the Error type in this crate.
signature = ["dep:signature"]
# Enable this feature to add impls for the traits in the `signature-dyn` crate.
signature-dyn = ["dep:signature-dyn"]

[dependencies]
blake3 = { version = "1.8.2", optional = true }
ed25519-dalek = { version = "3.0.0-rc.0", optional = true }
ed448-goldilocks = { version = "0.14.0-pre.13", optional = true }
k256 = { version = "0.14.0-rc.11", optional = true }
multibase = "0.9.1"
multihash = "0.19.3"
p256 = { version = "0.14.0-rc.11", optional = true }
p384 = { version = "0.14.0-rc.11", optional = true }
p521 = { version = "0.14.0-rc.11", optional = true }
pneutype = "0.5.1"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
sha2 = { version = "0.11.0", optional = true }
sha3 = { version = "0.12.0", optional = true }
signature = { version = "3.0.0", optional = true }
signature-dyn = { version = "0.2.0", optional = true, features = [
    "ssi-multicodec",
] }
ssi-multicodec = "0.2.0"

[dev-dependencies]
digest = "0.11.0"
ed25519-dalek = { version = "3.0.0-rc.0", features = ["digest", "rand_core"] }
hex-literal = "1.0.0"
# This version is needed for compatibility with k256::ecdsa::SigningKey
rand = { version = "0.10.1", features = ["sys_rng"] }
serde_json = "1.0.143"
signature = "3.0.0"

[patch.crates-io]
pneutype = { git = "https://github.com/vdods/pneutype", rev = "pneutype-v0.5.1" }
signature-dyn = { git = "https://github.com/LedgerDomain/signature-dyn", rev = "signature-dyn-v0.2.0" }

[workspace]
members = [".", "mbx-bin"]
