[package]
name = "mbx"
version = "0.2.2"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2024"

[features]
# Enable this feature to add support for converting between blake3 hash types and the types in this crate.
blake3 = ["dep:blake3"]
# Enable this feature to add support for the codec_str function, which gives the `&'static str` representation of a codec.
codec-str = []
# Enable this feature to add support for converting between ed25519-dalek crate priv+pub keys and the types in this crate.
ed25519-dalek = ["dep:ed25519-dalek", "dep:signature"]
# Enable this feature to add support for converting between ed448-goldilocks crate priv+pub keys and the types in this crate.
ed448-goldilocks = ["dep:ed448-goldilocks", "dep:signature"]
# Enable this feature to add support for converting between k256 crate priv+pub keys and the types in this crate.
k256 = ["dep:k256", "dep:signature"]
# Enable this feature to add support for converting between p256 crate priv+pub keys and the types in this crate.
p256 = ["dep:p256", "dep:signature"]
# Enable this feature to add support for converting between p384 crate priv+pub keys and the types in this crate.
p384 = ["dep:p384", "dep:signature"]
# Enable this feature to add support for converting between p521 crate priv+pub keys and the types in this crate.
p521 = ["dep:p521", "dep:signature"]
# Enable this feature to add support for the `serde` Deserialize and Serialize traits for the types in this crate.
serde = ["dep:serde"]
# Enable this feature to add support for converting between sha2 crate hash types and the types in this crate.
sha2 = ["dep:sha2"]
# Enable this feature to add support for converting between sha3 crate hash types and the types in this crate.
sha3 = ["dep:sha3"]
# Enable this feature to add support for conversions from signature crate error types to the Error type in this crate.
signature = ["dep:signature"]
# Enable this feature to add impls for the traits in the `signature-dyn` crate.
signature-dyn = ["dep:signature-dyn"]

[dependencies]
blake3 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
ed448-goldilocks = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }
multibase = { workspace = true }
multihash = { workspace = true }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }
p521 = { workspace = true, optional = true }
pneutype = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
sha2 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
signature = { workspace = true, optional = true }
signature-dyn = { workspace = true, optional = true, features = [
    "ssi-multicodec",
] }
ssi-multicodec = { workspace = true }

[dev-dependencies]
digest = { workspace = true }
ed25519-dalek = { workspace = true, features = ["digest", "rand_core"] }
hex-literal = { workspace = true }
rand = { workspace = true, features = ["sys_rng"] }
serde_json = { workspace = true }
signature = { workspace = true }

[workspace]
members = [".", "mbx-bin"]

[workspace.dependencies]
blake3 = "1.8.2"
clap = "4.5.17"
digest = "0.11.0"
ed25519-dalek = "3.0.0-rc.0"
ed448-goldilocks = "0.14.0-pre.13"
hex-literal = "1.0.0"
k256 = "0.14.0-rc.11"
multibase = "0.9.1"
multihash = "0.19.3"
p256 = "0.14.0-rc.11"
p384 = "0.14.0-rc.11"
p521 = "0.14.0-rc.11"
pneutype = { git = "https://github.com/vdods/pneutype", rev = "pneutype-v0.5.1" }
rand = "0.10.1"
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.11.0"
sha3 = "0.12.0"
signature = "3.0.0"
signature-dyn = { git = "https://github.com/LedgerDomain/signature-dyn", rev = "signature-dyn-v0.2.1" }
ssi-multicodec = "0.2.0"
