[package]
name = "mbx-bin"
version = "0.3.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2024"

[dependencies]
blake3 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
digest = { workspace = true }
mbx = { path = "..", features = ["blake3", "codec-str", "sha2", "sha3"] }
sha2 = { workspace = true }
sha3 = { workspace = true }
ssi-multicodec = { workspace = true }

[[bin]]
name = "mbx"
path = "main.rs"
